--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\MInhDepZai\AppData\Local\Temp\testng-eclipse--753569914\testng-customsuite.xml</span>
+                    <span>C:\Users\minhpb\AppData\Local\Temp\testng-eclipse-1232189955\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\MInhDepZai\AppData\Local\Temp\testng-eclipse--753569914\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\minhpb\AppData\Local\Temp\testng-eclipse-1232189955\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getWeatherDetail')
 data.setCell(0, 2, 'RestApiTestng.RestApiTestng.TC_Get_Request')
-data.setCell(0, 3, 3546);
+data.setCell(0, 3, 1339);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
